[package]
name = "rs-crtsh"
version = "0.1.4"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
cli-table = "0.5"
csv = "1.4.0"
reqwest = { version = "0.12.26", default-features = false, features = ["charset", "cookies", "json", "blocking", "rustls-tls", "http2", "multipart"] }
serde = "1.0.228"
serde_json = "1.0.145"
toml = "0.9"

[profile.release]
opt-level = "s"       # サイズと速度のバランスを取る最適化
lto = "fat"           # 最大限のリンク時最適化を有効化
codegen-units = 1     # コード生成ユニットを減らし、最適化を強化
panic = "abort"       # panic 時に 'unwind' ではなく 'abort' を使用
strip = "symbols"     # シンボル情報を削除し、必要なデバッグ情報は保持
